// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders secondary button 1`] = `
.c0 {
  border: 1px solid #1785FB;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c1 {
  border-right: 1px solid #1785FB;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1:last-child {
  border-right: 0;
}

.c2 {
  border: 0;
  box-shadow: none;
  border-radius: 0px;
  background: transparent;
  color: #1785FB;
  cursor: pointer;
  padding: 6px 12px;
  font: 500 12px/20px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2[disabled],
.c2.is-disabled {
  opacity: 0.24;
  cursor: default;
}

.c2:hover {
  background: #f9fcff;
}

.c2:focus {
  background: #e0eefe;
  outline: none;
}

.c2.is-disabled:hover,
.c2.is-disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c2 .button-media {
  margin: 0 -6px;
}

.c2 svg + * {
  margin-left: 8px;
}

<ul
  className="c0"
  data-component="ButtonGroup"
>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <svg
        className=""
        fill="#1785FB"
        height={16}
        viewBox="0 0 15 15"
        width={16}
      >
        <polygon
          points="0.020904541 7.00476178 7.01217651 7.00476178 7.06573917 0.0133888789 8.00093254 0.0133888789 8.00093254 7.00476178 15.0067139 7.00476178 15.0067139 8.00007932 8.00093254 8.00007932 8.00093254 14.9849872 7.01217651 14.9849872 7.01217651 8.00007932 0.020904541 8.00007932"
        />
      </svg>
    </button>
  </li>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <span>
        Mundo
      </span>
    </button>
  </li>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <span>
        Happy
      </span>
    </button>
  </li>
</ul>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  border: 1px solid #1785FB;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c1 {
  border-right: 1px solid #035dbd;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1:last-child {
  border-right: 0;
}

.c2 {
  border: 0;
  box-shadow: none;
  border-radius: 0px;
  background: #1785FB;
  color: #fff;
  cursor: pointer;
  padding: 6px 12px;
  font: 500 12px/20px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2[disabled],
.c2.is-disabled {
  opacity: 0.24;
  cursor: default;
}

.c2:hover {
  background: #035dbd;
}

.c2:focus {
  background: #034995;
  outline: none;
}

.c2.is-disabled:hover,
.c2.is-disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c2 .button-media {
  margin: 0 -6px;
}

.c2 svg + * {
  margin-left: 8px;
}

<ul
  className="c0"
  data-component="ButtonGroup"
>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <svg
        className=""
        fill="#fff"
        height={16}
        viewBox="0 0 15 15"
        width={16}
      >
        <polygon
          points="0.020904541 7.00476178 7.01217651 7.00476178 7.06573917 0.0133888789 8.00093254 0.0133888789 8.00093254 7.00476178 15.0067139 7.00476178 15.0067139 8.00007932 8.00093254 8.00007932 8.00093254 14.9849872 7.01217651 14.9849872 7.01217651 8.00007932 0.020904541 8.00007932"
        />
      </svg>
    </button>
  </li>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <span>
        Mundo
      </span>
    </button>
  </li>
  <li
    className="c1"
  >
    <button
      className="c2"
      data-component="Button"
      radius={0}
    >
      <span>
        Happy
      </span>
    </button>
  </li>
</ul>
`;
